--- a/spring-cloud-azure-core/pom.xml
+++ b/spring-cloud-azure-core/pom.xml
@@ -21,6 +21,10 @@
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
+      <artifactId>azure-core-management</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
       <artifactId>azure-identity</artifactId>
     </dependency>
     <dependency>
