--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,13 +13,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        distribution: [ 'zulu', 'adopt' ]
+        java: [ '8', '11', '13', '15' ]
+    name: CI test on  ${{ matrix.Java }} (${{ matrix.distribution }})
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 8
+    - name: Set up JDK
       uses: actions/setup-java@v2
       with:
-        java-version: '8'
-        distribution: 'adopt'
+        java-version: ${{ matrix.java }}
+        distribution: ${{ matrix.distribution }}
     - name: Build with Maven
       run: mvn -B package --file pom.xml
