--- a/spring-cloud-azure-dependencies/pom.xml
+++ b/spring-cloud-azure-dependencies/pom.xml
@@ -22,6 +22,11 @@
       <name>GitHub Packages</name>
       <url>https://maven.pkg.github.com/stliu/spring-cloud-azure</url>
     </repository>
+    <snapshotRepository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/stliu/spring-cloud-azure</url>
+    </snapshotRepository>
   </distributionManagement>
   <properties>
     <azure.sdk.bom>1.0.3</azure.sdk.bom>
