--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,10 +13,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     strategy:
       matrix:
-        distribution: [ 'zulu', 'adopt' ]
-        java: [ '8', '11', '13', '15' ]
+#        distribution: [ 'zulu', 'adopt' ]
+#        java: [ '8', '11', '13', '15' ]
+        distribution: [  'adopt' ]
+        java: [ '8' ]
     name: CI test on  ${{ matrix.Java }} (${{ matrix.distribution }})
     steps:
     - uses: actions/checkout@v2
