--- a/spring-cloud-azure-autoconfigure/pom.xml
+++ b/spring-cloud-azure-autoconfigure/pom.xml
@@ -32,6 +32,12 @@
     <!--  Azure SDK -->
     <dependency>
       <groupId>com.azure</groupId>
+      <artifactId>azure-spring-data-cosmos</artifactId>
+      <version>3.9.0</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
       <artifactId>azure-security-keyvault-secrets</artifactId>
       <optional>true</optional>
     </dependency>
@@ -176,6 +182,11 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
     </dependency>
 
     <!-- Test -->
