--- a/spring-cloud-azure-core/pom.xml
+++ b/spring-cloud-azure-core/pom.xml
@@ -32,6 +32,10 @@
       <artifactId>azure-core-http-netty</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core-amqp</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
     </dependency>
