--- a/spring-cloud-azure-core/pom.xml
+++ b/spring-cloud-azure-core/pom.xml
@@ -49,5 +49,11 @@
       <artifactId>azure-storage-blob</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-inline</artifactId>
+      <version>3.9.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
