--- a/spring-cloud-azure-core/pom.xml
+++ b/spring-cloud-azure-core/pom.xml
@@ -26,6 +26,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-identity</artifactId>
+      <version>1.4.0-beta.1</version>
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
