--- a/spring-cloud-azure-dependencies/pom.xml
+++ b/spring-cloud-azure-dependencies/pom.xml
@@ -55,6 +55,30 @@
         <artifactId>spring-cloud-azure-starter</artifactId>
         <version>${project.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-core</artifactId>
+        <version>1.18.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-core-amqp</artifactId>
+        <version>2.3.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-messaging-eventhubs</artifactId>
+        <version>5.9.0</version>
+        <!-- Current is 5.7.1, the named key credential is the new feature in higer version. -->
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-messaging-servicebus</artifactId>
+        <version>7.3.0</version>
+        <!-- The named key credential is the new feature in higer version. -->
+      </dependency>
+
       <!--Azure SDK BOM -->
       <dependency>
         <groupId>com.azure</groupId>
