--- a/spring-cloud-azure-core/pom.xml
+++ b/spring-cloud-azure-core/pom.xml
@@ -3,69 +3,53 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <groupId>com.azure</groupId>
-    <artifactId>azure-client-sdk-parent</artifactId>
-    <version>1.7.0</version> <!-- {x-version-update;com.azure:azure-client-sdk-parent;current} -->
-    <relativePath>../../parents/azure-client-sdk-parent</relativePath>
+    <groupId>com.azure.spring</groupId>
+    <artifactId>spring-cloud-azure</artifactId>
+    <version>4.0.0-beta.4-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.azure.spring</groupId>
   <artifactId>spring-cloud-azure-core</artifactId>
-  <version>4.0.0-beta.4</version> <!-- {x-version-update;com.azure.spring:spring-cloud-azure-core;current} -->
+  <version>4.0.0-beta.4-SNAPSHOT</version> 
 
   <name>Spring Cloud Azure Core</name>
-  <url>https://microsoft.github.io/spring-cloud-azure</url>
-  <developers>
-    <developer>
-      <name>Spring Cloud Azure</name>
-      <email>SpringIntegSupport@microsoft.com</email>
-    </developer>
-  </developers>
-  <scm>
-    <connection>scm:git:git@github.com:Azure/azure-sdk-for-java.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com:Azure/azure-sdk-for-java.git</developerConnection>
-    <url>https://github.com/Azure/azure-sdk-for-java</url>
-  </scm>
-  <issueManagement>
-    <system>GitHub</system>
-    <url>https://github.com/Azure/azure-sdk-for-java/issues</url>
-  </issueManagement>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>5.3.15</version> <!-- {x-version-update;org.springframework:spring-context;external_dependency} -->
+      <version>5.3.15</version> 
     </dependency>
 
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-identity</artifactId>
-      <version>1.4.5</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
+      <version>1.4.5</version> 
       <scope>compile</scope>
     </dependency>
 
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.25.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
+      <version>1.25.0</version> 
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-amqp</artifactId>
-      <version>2.4.0</version> <!-- {x-version-update;com.azure:azure-core-amqp;dependency} -->
+      <version>2.4.0</version> 
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-management</artifactId>
-      <version>1.5.2</version> <!-- {x-version-update;com.azure:azure-core-management;dependency} -->
+      <version>1.5.2</version> 
     </dependency>
 
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-storage-blob</artifactId>
-      <version>12.14.4</version> <!-- {x-version-update;com.azure:azure-storage-blob;dependency} -->
+      <version>12.14.4</version> 
       <optional>true</optional>
       <exclusions>
         <exclusion>
@@ -77,7 +61,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-storage-file-share</artifactId>
-      <version>12.11.4</version> <!-- {x-version-update;com.azure:azure-storage-file-share;dependency} -->
+      <version>12.11.4</version> 
       <optional>true</optional>
       <exclusions>
         <exclusion>
@@ -90,63 +74,30 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>4.0.0</version><!-- {x-version-update;org.mockito:mockito-core;external_dependency} -->
+      <version>4.0.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.8.2</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter;external_dependency} -->
+      <version>5.8.2</version> 
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>5.3.15</version> <!-- {x-version-update;org.springframework:spring-test;external_dependency} -->
+      <version>5.3.15</version> 
       <scope>test</scope>
     </dependency>
 
-    <!-- Used to eliminate warnings when generate Java Docs.
-        Added this dependency to include necessary annotations used by reactor core.
-        Without this dependency, javadoc throws a warning as it cannot find enum When.MAYBE
-        which is used in @Nullable annotation in reactor core classes -->
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
-      <version>3.0.2</version> <!-- {x-version-update;com.google.code.findbugs:jsr305;external_dependency} -->
+      <version>3.0.2</version> 
       <scope>provided</scope>
     </dependency>
   </dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-enforcer-plugin</artifactId>
-        <version>3.0.0-M3</version> <!-- {x-version-update;org.apache.maven.plugins:maven-enforcer-plugin;external_dependency} -->
-        <configuration>
-          <rules>
-            <bannedDependencies>
-              <includes>
-                <include>org.springframework:spring-context:[5.3.15]</include> <!-- {x-include-update;org.springframework:spring-context;external_dependency} -->
-              </includes>
-            </bannedDependencies>
-          </rules>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.1.2</version> <!-- {x-version-update;org.apache.maven.plugins:maven-jar-plugin;external_dependency} -->
-        <configuration>
-          <archive>
-            <manifestEntries>
-              <Automatic-Module-Name>com.azure.spring.cloud.core</Automatic-Module-Name>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+
 
 </project>
