--- a/spring-cloud-azure-dependencies/pom.xml
+++ b/spring-cloud-azure-dependencies/pom.xml
@@ -36,6 +36,7 @@
   </properties>
   <dependencyManagement>
     <dependencies>
+      <!--      Azure SDKs-->
       <dependency>
         <groupId>com.azure</groupId>
         <artifactId>azure-identity</artifactId>
@@ -63,7 +64,7 @@
         <groupId>com.azure</groupId>
         <artifactId>azure-storage-blob</artifactId>
         <version>12.14.4</version>
-        <optional>true</optional>
+        
         <exclusions>
           <exclusion>
             <groupId>com.azure</groupId>
@@ -75,7 +76,7 @@
         <groupId>com.azure</groupId>
         <artifactId>azure-storage-file-share</artifactId>
         <version>12.11.4</version>
-        <optional>true</optional>
+        
         <exclusions>
           <exclusion>
             <groupId>com.azure</groupId>
@@ -83,7 +84,48 @@
           </exclusion>
         </exclusions>
       </dependency>
-
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-storage-queue</artifactId>
+        <version>12.11.4</version>
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-cosmos</artifactId>
+        <version>4.26.0</version>
+        
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-data-appconfiguration</artifactId>
+        <version>1.3.0</version>
+        
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-messaging-servicebus</artifactId>
+        <version>7.6.0</version>
+        
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-messaging-eventhubs</artifactId>
+        <version>5.11.0</version>
+        
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-security-keyvault-certificates</artifactId>
+        <version>4.2.7</version>
+        
+      </dependency>
+      <dependency>
+        <groupId>com.azure</groupId>
+        <artifactId>azure-security-keyvault-secrets</artifactId>
+        <version>4.3.7</version>
+        
+      </dependency>
+      <!--Test and Misc.-->
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
