enable messaging modules

--- a/pom.xml
+++ b/pom.xml
@@ -44,50 +44,52 @@
     <javax.activation.version>1.2.0</javax.activation.version>
     <spring-cloud-commons.version>3.1.0</spring-cloud-commons.version>
     <spring-javaformat.version>0.0.25</spring-javaformat.version>
+    <spring-cloud-dependencies.version>2021.0.0</spring-cloud-dependencies.version>
+    <spring-boot-dependencies.version>2.6.4</spring-boot-dependencies.version>
   </properties>
   <modules>
     <module>spring-cloud-azure-dependencies</module>
-<!--    <module>spring-messaging-azure</module>-->
-<!--    <module>spring-messaging-azure-eventhubs</module>-->
-<!--    <module>spring-messaging-azure-servicebus</module>-->
-<!--    <module>spring-messaging-azure-storage-queue</module>-->
-<!--    <module>spring-integration-azure-core</module>-->
-<!--    <module>spring-integration-azure-eventhubs</module>-->
-<!--    <module>spring-integration-azure-servicebus</module>-->
-<!--    <module>spring-integration-azure-storage-queue</module>-->
+    <module>spring-messaging-azure</module>
+    <module>spring-messaging-azure-eventhubs</module>
+    <module>spring-messaging-azure-servicebus</module>
+    <module>spring-messaging-azure-storage-queue</module>
+    <!--    <module>spring-integration-azure-core</module>-->
+    <!--    <module>spring-integration-azure-eventhubs</module>-->
+    <!--    <module>spring-integration-azure-servicebus</module>-->
+    <!--    <module>spring-integration-azure-storage-queue</module>-->
     <module>spring-cloud-azure-core</module>
-<!--    <module>spring-cloud-azure-service</module>-->
-<!--    <module>spring-cloud-azure-resourcemanager</module>-->
-<!--    <module>spring-cloud-azure-actuator</module>-->
-<!--    <module>spring-cloud-azure-actuator-autoconfigure</module>-->
-<!--    <module>spring-cloud-azure-autoconfigure</module>-->
-<!--    <module>spring-cloud-azure-starter-active-directory</module>-->
-<!--    <module>spring-cloud-azure-starter-active-directory-b2c</module>-->
-<!--    <module>spring-cloud-azure-starter-actuator</module>-->
-<!--    <module>spring-cloud-azure-starter-appconfiguration</module>-->
-<!--    <module>spring-cloud-azure-starter-cosmos</module>-->
-<!--    <module>spring-cloud-azure-starter-data-cosmos</module>-->
-<!--    <module>spring-cloud-azure-starter-eventhubs</module>-->
-<!--    <module>spring-cloud-azure-starter-keyvault-certificates</module>-->
-<!--    <module>spring-cloud-azure-starter-keyvault-secrets</module>-->
-<!--    <module>spring-cloud-azure-starter-servicebus-jms</module>-->
-<!--    <module>spring-cloud-azure-starter-servicebus</module>-->
-<!--    <module>spring-cloud-azure-starter-storage-blob</module>-->
-<!--    <module>spring-cloud-azure-starter-storage-file-share</module>-->
-<!--    <module>spring-cloud-azure-starter-storage-queue</module>-->
-<!--    <module>spring-cloud-azure-starter-integration-eventhubs</module>-->
-<!--    <module>spring-cloud-azure-starter-integration-servicebus</module>-->
-<!--    <module>spring-cloud-azure-starter-integration-storage-queue</module>-->
-<!--    <module>spring-cloud-azure-starter-stream-eventhubs</module>-->
-<!--    <module>spring-cloud-azure-starter-stream-servicebus</module>-->
-<!--    <module>spring-cloud-azure-starter</module>-->
-<!--    <module>spring-cloud-azure-stream-binder-eventhubs-core</module>-->
-<!--    <module>spring-cloud-azure-stream-binder-eventhubs</module>-->
-<!--    <module>spring-cloud-azure-stream-binder-servicebus-core</module>-->
-<!--    <module>spring-cloud-azure-stream-binder-servicebus</module>-->
-<!--    <module>spring-cloud-azure-test-eventhubs-binder</module>-->
-<!--    <module>spring-cloud-azure-test-servicebus-binder</module>-->
-<!--    <module>spring-cloud-azure-trace-sleuth</module>-->
+    <module>spring-cloud-azure-service</module>
+    <!--    <module>spring-cloud-azure-resourcemanager</module>-->
+    <!--    <module>spring-cloud-azure-actuator</module>-->
+    <!--    <module>spring-cloud-azure-actuator-autoconfigure</module>-->
+    <!--    <module>spring-cloud-azure-autoconfigure</module>-->
+    <!--    <module>spring-cloud-azure-starter-active-directory</module>-->
+    <!--    <module>spring-cloud-azure-starter-active-directory-b2c</module>-->
+    <!--    <module>spring-cloud-azure-starter-actuator</module>-->
+    <!--    <module>spring-cloud-azure-starter-appconfiguration</module>-->
+    <!--    <module>spring-cloud-azure-starter-cosmos</module>-->
+    <!--    <module>spring-cloud-azure-starter-data-cosmos</module>-->
+    <!--    <module>spring-cloud-azure-starter-eventhubs</module>-->
+    <!--    <module>spring-cloud-azure-starter-keyvault-certificates</module>-->
+    <!--    <module>spring-cloud-azure-starter-keyvault-secrets</module>-->
+    <!--    <module>spring-cloud-azure-starter-servicebus-jms</module>-->
+    <!--    <module>spring-cloud-azure-starter-servicebus</module>-->
+    <!--    <module>spring-cloud-azure-starter-storage-blob</module>-->
+    <!--    <module>spring-cloud-azure-starter-storage-file-share</module>-->
+    <!--    <module>spring-cloud-azure-starter-storage-queue</module>-->
+    <!--    <module>spring-cloud-azure-starter-integration-eventhubs</module>-->
+    <!--    <module>spring-cloud-azure-starter-integration-servicebus</module>-->
+    <!--    <module>spring-cloud-azure-starter-integration-storage-queue</module>-->
+    <!--    <module>spring-cloud-azure-starter-stream-eventhubs</module>-->
+    <!--    <module>spring-cloud-azure-starter-stream-servicebus</module>-->
+    <!--    <module>spring-cloud-azure-starter</module>-->
+    <!--    <module>spring-cloud-azure-stream-binder-eventhubs-core</module>-->
+    <!--    <module>spring-cloud-azure-stream-binder-eventhubs</module>-->
+    <!--    <module>spring-cloud-azure-stream-binder-servicebus-core</module>-->
+    <!--    <module>spring-cloud-azure-stream-binder-servicebus</module>-->
+    <!--    <module>spring-cloud-azure-test-eventhubs-binder</module>-->
+    <!--    <module>spring-cloud-azure-test-servicebus-binder</module>-->
+    <!--    <module>spring-cloud-azure-trace-sleuth</module>-->
   </modules>
 
   <dependencyManagement>
@@ -100,9 +102,17 @@
         <scope>import</scope>
       </dependency>
       <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-dependencies</artifactId>
+        <version>${spring-boot-dependencies.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+      <dependency>
         <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-commons-dependencies</artifactId>
-        <version>${spring-cloud-commons.version}</version>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud-dependencies.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -191,23 +201,23 @@
     </pluginManagement>
     <plugins>
       <!--TODO shaozliu - disable checkstyle since azure sdk uses different style with spring ones -->
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-checkstyle-plugin</artifactId>-->
-<!--      </plugin>-->
-<!--      <plugin>-->
-<!--        <groupId>io.spring.javaformat</groupId>-->
-<!--        <artifactId>spring-javaformat-maven-plugin</artifactId>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <phase>validate</phase>-->
-<!--            <inherited>true</inherited>-->
-<!--            <goals>-->
-<!--              <goal>validate</goal>-->
-<!--            </goals>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
+      <!--      <plugin>-->
+      <!--        <groupId>org.apache.maven.plugins</groupId>-->
+      <!--        <artifactId>maven-checkstyle-plugin</artifactId>-->
+      <!--      </plugin>-->
+      <!--      <plugin>-->
+      <!--        <groupId>io.spring.javaformat</groupId>-->
+      <!--        <artifactId>spring-javaformat-maven-plugin</artifactId>-->
+      <!--        <executions>-->
+      <!--          <execution>-->
+      <!--            <phase>validate</phase>-->
+      <!--            <inherited>true</inherited>-->
+      <!--            <goals>-->
+      <!--              <goal>validate</goal>-->
+      <!--            </goals>-->
+      <!--          </execution>-->
+      <!--        </executions>-->
+      <!--      </plugin>-->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
