--- a/spring-cloud-azure-test-servicebus-binder/pom.xml
+++ b/spring-cloud-azure-test-servicebus-binder/pom.xml
@@ -5,58 +5,23 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.3</version> <!-- {x-version-update;org.springframework.boot:spring-boot-starter-parent;external_dependency} -->
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>com.azure.spring</groupId>
+    <artifactId>spring-cloud-azure</artifactId>
+    <version>4.0.0-beta.4-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>com.azure.spring</groupId>
   <artifactId>spring-cloud-azure-test-servicebus-binder</artifactId>
-  <version>1.0.0</version> <!-- {x-version-update;com.azure.spring:spring-cloud-azure-test-servicebus-binder;current} -->
-  <url>https://microsoft.github.io/spring-cloud-azure</url>
-  <developers>
-    <developer>
-      <name>Spring Cloud Azure</name>
-      <email>SpringIntegSupport@microsoft.com</email>
-    </developer>
-  </developers>
-  <scm>
-    <connection>scm:git:git@github.com:Azure/azure-sdk-for-java.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com:Azure/azure-sdk-for-java.git</developerConnection>
-    <url>https://github.com/Azure/azure-sdk-for-java</url>
-  </scm>
-  <issueManagement>
-    <system>GitHub</system>
-    <url>https://github.com/Azure/azure-sdk-for-java/issues</url>
-  </issueManagement>
+  <version>4.0.0-beta.4-SNAPSHOT</version>
 
   <properties>
     <skipSpringITs>true</skipSpringITs>
   </properties>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>2021.0.1</version> <!-- {x-version-update;org.springframework.cloud:spring-cloud-dependencies;external_dependency} -->
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
   <dependencies>
     <dependency>
       <groupId>com.azure.spring</groupId>
       <artifactId>spring-cloud-azure-stream-binder-servicebus</artifactId>
-      <version>4.0.0-beta.4</version> <!-- {x-version-update;com.azure.spring:spring-cloud-azure-stream-binder-servicebus;current} -->
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -65,7 +30,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.22.0</version> <!-- {x-version-update;org.apache.maven.plugins:maven-failsafe-plugin;external_dependency} -->
         <executions>
           <execution>
             <id>default</id>
